--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-redux": "^8.1.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
@@ -30,6 +30,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.5",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
