--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
